# uma_geometry_optimizer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
examples/: config.json  config.yaml  ethanol_ensemble_optimized.xyz  example_cli_usage.py  example_ensemble_custom_config.xyz  example_ensemble_optimization.py  example_single_optimization.py  test.xyz
examples/read_multiple_xyz_dir/: conf1_sp_geometry.xyz  conf3_sp_geometry.xyz  conf4_sp_geometry.xyz
examples/read_multiple_xyz_file/: conf0_confsearch_ensemble.xyz
src/uma_geometry_optimizer/: __init__.py  api.py  cli.py  config.py  decorators.py  io_handler.py  logging_utils.py  model.py  models.py  mol_utils.py  optimizer.py  structure.py
tests/: conftest.py  test_cli.py  test_config.json  test_config.py  test_config_module.py  test_decorators.py  test_io.py  test_io_handler.py  test_models_module.py  test_mol_utils.py  test_optimizer_module.py  test_package_api.py  test_structure.py
